--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+   <!--<link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> --> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="myscriptfile/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Irosas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +43,73 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div class = "grid-container">
+
+        <div class = "menu grid-item" >
+            <h1 id = "webname">Irosas</h1>
+            <div id = "manage" style="background-color:#7d6e83">
+                <p style="margin-left :20pt; font-size : 15pt;color: #fff">Quản lí đơn hàng</p>
+            </div>
+        </div>
+    
+        <div class= "grid-item">
+            <div class = "header">
+                <b id = "text" style="font-size: 16pt; padding-left:10px">
+                    Quản lí đơn hàng
+                </b>
+                <p style="float: right; font-size: 16pt">
+                    email@gmail.com
+                </p>
+            </div>
+            <div class = "content">
+                <div class="order">
+                <table class="table-hover">
+                    <thead>
+                      <tr >
+                        <th>#</th>
+                        <th>Tên</th>
+                        <th>Địa chỉ</th>
+                        <th>Trạng thái</th>
+                        <th>Tổng đơn</th>
+                        <th>Thao tác</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr onclick="location.href ='order.html'">
+                        <td>1</td>
+                        <td >Nguyễn Văn An</td>
+                        <td>123, Tạ Quang Bửu,...</td>
+                        <td>Đang giao hàng</td>
+                        <td>60.000</td>
+                        <td>
+                            <span style='font-size:30px;'>&#9989;</span>
+                       </td>
+                      </tr>
+                      <tr onclick="location.href ='ship.html'">
+                        <td>2</td>
+                        <td >Trần Văn B</td>
+                        <td>213, Nguyễn Thị Minh Khai,...</td>
+                        <td>Đang giao hàng</td>
+                        <td>120.000</td>
+                        <td>
+                            <span style='font-size:40px;'>&#9744;</span>
+                        </td>
+                      </tr>
+                      <tr onclick="location.href ='ship.html'">
+                        <td>3</td>
+                        <td >Lê Minh T</td>
+                        <td>12/7, Tạ Quang Bửu,...</td>
+                        <td>Đang giao hàng</td>
+                        <td>70.000</td>
+                        <td>
+                            <span style='font-size:25px;'>&#10060;</span>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>  
+                </div>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
